--- a/src/6.layout/table-layout.html
+++ b/src/6.layout/table-layout.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Table+Margin.Auto实现内容自适应水平居中</title>
     <style>
         html {
             font-family: sans-serif;
